Started working on site layout.

--- a/css/main.css
+++ b/css/main.css
@@ -92,21 +92,112 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
+html, body{
+    height: 100%;
+    width: 100%;
+    padding: 0;
+    font-family: "Segoe UI", "Segoe", "Verdana", sans-serif;
+    font-size: 100%;
+    background: #222;
+    color: #eee;
+}
 
+p{
+    padding: 0;
+    margin: 0;
+}
 
+a{
+    text-decoration: none;
+    color: #a055f0;
+}
 
+#nav a{
+    color: #eee;
+}
 
+#nav a:hover{
+    color: #a055f0;
+}
 
+#siteTitle{
+    float: left;
+    padding: 2px 0 0 15px;
+    font-size: 2em;
+    font-weight: lighter;
+}
 
+#siteTitle .primaryColor{
+    font-weight: bold;
+    font-size: 1.2em;
+}
 
+#container{
+    width: 100%;
+    margin: 0 auto;
+    background: #111;
+    overflow: hidden;
+}
 
+#headerWrapper{
+    width: 100%;
+    background: #222;
+}
 
+#header{
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    max-width: 960px;
+    overflow: hidden;
+    margin: 0 auto;
+}
 
+.primaryColor{
+    display: inline;
+    color: #a055f0;
+}
 
+#nav{
+    float:left;
+    clear: both;
+    padding: 5px 0 10px 0;
+    margin-left: 50px;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
 
+.navSection{
+    float: left;
+    margin-right: 20px;
+}
 
+.navSection a{
 
+}
 
+#content{
+    margin: 0 auto;
+    max-width: 960px;
+    min-height: 600px;
+    background: #111;
+    line-height: 1.6em;
+    padding: 20px;
+
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+#footer{
+    width: 100%;
+    float: left;
+    clear: both;
+    background: #222;
+    text-align: center;
+    padding: 20px;
+}
 
 
 /* ==========================================================================
