--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ a{
     float:left;
     clear: both;
     padding: 5px 0 10px 0;
-    margin-left: 50px;
+    margin-left: 90px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -184,10 +184,22 @@ a{
     background: #111;
     line-height: 1.6em;
     padding: 20px;
+    font-size: .875em;
 
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+
+#content p{
+
+}
+
+h1, h2, h3, h4, h5, h6{
+    color: #a055f0;
+    font-size: 1.8em;
+    padding: 20px 0 10px 0;
+    margin: 0;
 }
 
 #footer{
