--- a/css/main.css
+++ b/css/main.css
@@ -96,9 +96,10 @@ html, body{
     height: 100%;
     width: 100%;
     padding: 0;
-    font-family: "Segoe UI", "Segoe", "Verdana", sans-serif;
+    font-family: "Segoe UI Light","Segoe WPC", "Segoe UI", "Segoe",  Helvetica, Arial, "Arial Unicode MS", Sans-Serif;
     font-size: 100%;
-    background: #222;
+    background: #333333;
+    background: url('../img/noise.png') repeat;
     color: #eee;
 }
 
@@ -112,11 +113,11 @@ a{
     color: #a055f0;
 }
 
-#nav a{
+#header a{
     color: #eee;
 }
 
-#nav a:hover{
+#header a:hover{
     color: #a055f0;
 }
 
@@ -128,20 +129,29 @@ a{
 }
 
 #siteTitle .primaryColor{
-    font-weight: bold;
+    font-weight: 800;
     font-size: 1.2em;
 }
 
 #container{
     width: 100%;
     margin: 0 auto;
-    background: #111;
+    background: #252525;
     overflow: hidden;
 }
 
 #headerWrapper{
     width: 100%;
-    background: #222;
+    background: #333333;
+    background: url('../img/noise.png') repeat;
+    margin-bottom: 8px;
+    -moz-box-shadow: 0px 4px 6px #111;
+    -webkit-box-shadow: 0px 4px 6px #111;
+    box-shadow: 0px 4px 6px #111;
+    /* For IE 8 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#111')";
+    /* For IE 5.5 - 7 */
+    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#111');
 }
 
 #header{
@@ -155,35 +165,43 @@ a{
 
 .primaryColor{
     display: inline;
-    color: #a055f0;
+    color: #a055f0 !important;
 }
 
 #nav{
     float:left;
     clear: both;
     padding: 5px 0 10px 0;
-    margin-left: 90px;
+    margin-left: 80px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+    font-size: 1.1em;
 }
 
 .navSection{
     float: left;
-    margin-right: 20px;
+    margin-right: 25px;
 }
 
 .navSection a{
 
 }
 
+#breadcrumbs{
+    float: left;
+    clear: both;
+    padding: 5px 0 10px 0;
+    font-weight: bold;
+    font-size: .9em;
+}
+
 #content{
     margin: 0 auto;
     max-width: 960px;
     min-height: 600px;
-    background: #111;
+    background: #252525;
     line-height: 1.6em;
-    padding: 20px;
     font-size: .875em;
 
     -webkit-box-sizing: border-box;
@@ -191,24 +209,71 @@ a{
     box-sizing: border-box;
 }
 
-#content p{
+#login{
+    padding-top: 20px;
+    float: right;
+}
 
+.bold{
+    font-size: 1.2em;
+    font-weight: bolder;
+}
+
+#login a{
+    padding: 5px;
+}
+
+#content p{
+    margin-left: 60px;
 }
 
 h1, h2, h3, h4, h5, h6{
+    margin: 0;
+}
+
+h2{
+    color: #eee;
+    font-size: 2em;
+    font-weight: 100;
+    padding: 30px 0 20px 0;
+}
+
+h3{
     color: #a055f0;
     font-size: 1.8em;
-    padding: 20px 0 10px 0;
-    margin: 0;
+    font-weight: bolder;
+    padding: 30px 0 20px 0;
+
+    margin-left: 40px;
+}
+
+.img{
+    max-width: 200px;
+    max-height: 200px;
+    border: 6px solid #1c1c1c;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    margin: 20px;
+    float: right;
 }
 
 #footer{
     width: 100%;
     float: left;
     clear: both;
-    background: #222;
+    background: #333333;
+    background: url('../img/noise.png') repeat;
     text-align: center;
     padding: 20px;
+
+    -moz-box-shadow: 0px -4px 6px #111;
+    -webkit-box-shadow: 0px -4px 6px #111;
+    box-shadow: 0px -4px 6px #111;
+    /* For IE 8 */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#111')";
+    /* For IE 5.5 - 7 */
+    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#111');
 }
 
 
